tests/parsing/smtlib/v2.7/errors/073_define-fun_unclosed_1.smt2
(set-logic ALL)
(define-fun foo () bool true _)
